fix left-right scroll, fix image align

--- a/css/main.css
+++ b/css/main.css
@@ -107,11 +107,12 @@ a{
 #rushPikejpg {
 	width: 100%;
 }
-#houseInfoPic {
+#houseInfoPic, #googmap {
 	width: 70%;
-	margin-left: 15%;
-	margin-right: 15%;
+	margin-left:15%;
+	margin-right:15%;
 	margin-bottom: 50px;
+
 }
 
 form {
@@ -134,6 +135,7 @@ form {
 }
 
 #calendar {
+	width:100%;
 }
 
 footer {
